apps/workflows/overlays/codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: null
  name: codefresh-workflows-ingress
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: a2ed251cd969649a0b7d7cd4a4f8c63f-ff444eb88565937f.elb.ap-southeast-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows(/|$)(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
